<resources>
    <string name="app_name">Students HBSH</string>
    <string name="toolbarTxt">Мониторинг</string>
    <string name="exit">Выход</string>
    <string name="teachers">Преподователи</string>
    <string name="timetable">Расписание</string>
    <string name="students">Ученики</string>
    <string name="scanAndFind">Сканировать и найти</string>
    <string name="monitorStudent">Мониторинг перемещения учащихся</string>
    <string name="Mteacher">учителей...</string>
    <string name="Tklass">10А</string>
    <string name="Tgroup">Группа</string>
    <string name="Tmathematics">Mathematics</string>
    <string name="TTmathematics">Даулетбай М</string>
    <string name="Tmathematics_10">Mathematics_10</string>
    <string name="TTmathematics_10" />
    <string name="Tbiology">Biology</string>
    <string name="TTbiology">Арапбаева У</string>
    <string name="Tchemistry">Chemistry</string>
    <string name="TTchemistry">Ергешова Б</string>
    <string name="Tphysics">Physics</string>
    <string name="TTphysics">Өмірқұл Б</string>
    <string name="Tinformatics">Informatics</string>
    <string name="TTinformatics">Тоқжанов Б</string>
    <string name="Tenglish">English</string>
    <string name="TTenglish">Бегімбет М</string>
    <string name="Tkazakh">Kazakh</string>
    <string name="TTkazakh">Дарыбаева Н</string>
    <string name="Trussian">Russian</string>
    <string name="TTrussian">Байтенова Ж</string>
    <string name="Tgeography">Geography</string>
    <string name="TTgeography">Байарыстанова А</string>
    <string name="Thistory_of_kazakhstan">History of Kazakhstan</string>
    <string name="TThistory_of_kazakhstan">Ибраева А</string>
    <string name="Tkmw">KMW</string>
    <string name="TTkmw">" "</string>
    <string name="Tthe_world_history">The World History</string>
    <string name="TTthe_world_history">Әлжан Б</string>
    <string name="Mstudent">учащегося...</string>
    <string name="Mtimetable">расписания...</string>
    <string name="Pfio">Қамбар Бақберген</string>
    <string name="Piin">ИИН:</string>
    <string name="PPiin">0</string>
    <string name="Pklass">класс</string>
    <string name="PPklass">10A</string>
    <string name="Pgroup">подгруппа</string>
    <string name="PPgroup">1</string>
    <string name="Ppv">предмет по выбору</string>
    <string name="Ppv1">физика</string>
    <string name="Ppv2">химия</string>
    <string name="Ppvs">графика и проектирование</string>
    <string name="PgrK">группа (кабинет)</string>
    <string name="PgrK1">Ф4 (каб.№ 101 ФМ)</string>
    <string name="PgrK2">Х6 (каб.№ 101 ФМ)</string>
    <string name="PgrKs">ГиП1</string>
    <string name="MainScan">Сканировать</string>
    <string name="MainFind">Найти</string>
    <string name="MainResultHint">можете ввести в ручную</string>
    <string name="MainResultTxt">Отсканированный иин учащегося:</string>
    <string name="TTbGroup">Группа</string>
    <string name="TTbGroup_">10А</string>
    <string name="TTbMon">Понидельник</string>
    <string name="TTbTue">Вторник</string>
    <string name="TTbWen">Среда</string>
    <string name="TTbThu">Четверг</string>
    <string name="TTbFri">Пятница</string>
    <string name="TTbSat">Суббота</string>
    <string name="MonT1">8:30</string>
    <string name="MonT2" />
    <string name="MonT3">9:50</string>
    <string name="MonT4" />
    <string name="MonT5">11:20</string>
    <string name="MonT6" />
    <string name="MonS1">Химия</string>
    <string name="MonS2">Химия</string>
    <string name="MonS3">Математика</string>
    <string name="MonS4">Математика</string>
    <string name="MonS5">Я2</string>
    <string name="MonS6">Я2</string>
    <string name="TueT1">8:30</string>
    <string name="TueT2">9:30</string>
    <string name="TueT3">9:50</string>
    <string name="TueT4">10:50</string>
    <string name="TueT5">11:20</string>
    <string name="TueT6">12:20</string>
    <string name="TueS1">Физика</string>
    <string name="TueS2">Физика</string>
    <string name="TueS3">Биология</string>
    <string name="TueS4">Я2</string>
    <string name="TueS5">English</string>
    <string name="TueS6" />
    <string name="WedT1">8:30</string>
    <string name="WedT2">9:30</string>
    <string name="WedT3">9:50</string>
    <string name="WedT4">10:50</string>
    <string name="WedT5">11:20</string>
    <string name="WedT6">12:20</string>
    <string name="WedT7">11:20-11:40</string>
    <string name="WedT8">11:45-12:05</string>
    <string name="WedS1">Химия</string>
    <string name="WedS2">Химия</string>
    <string name="WedS3">Математика</string>
    <string name="WedS4">Математика</string>
    <string name="WedS5">English</string>
    <string name="WedS6">English</string>
    <string name="WedS7">Математика/КСМ</string>
    <string name="WedS8">Математика/КСМ</string>
    <string name="ThuT1">8:30</string>
    <string name="ThuT2">9:30</string>
    <string name="ThuT3">9:50</string>
    <string name="ThuT4">10:50</string>
    <string name="ThuT5">11:20</string>
    <string name="ThuT6">12:20</string>
    <string name="ThuS1">Физика</string>
    <string name="ThuS2">Физика</string>
    <string name="ThuS3">Математика</string>
    <string name="ThuS4">Математика</string>
    <string name="ThuS5">English</string>
    <string name="ThuS6">English</string>
    <string name="FriT1">8:30</string>
    <string name="FriT2">9:30</string>
    <string name="FriT3">9:50</string>
    <string name="FriT4">10:50</string>
    <string name="FriT5">11:20</string>
    <string name="FriT6">12:20</string>
    <string name="FriS1">Биология</string>
    <string name="FriS2">Биология</string>
    <string name="FriS3">Информатика</string>
    <string name="FriS4">Информатика</string>
    <string name="FriS5" />
    <string name="FriS6" />
    <string name="SatT1">8:30</string>
    <string name="SatT2">9:30</string>
    <string name="SatT3">9:50</string>
    <string name="SatT4">10:50</string>
    <string name="SatT5">11:20</string>
    <string name="SatT6">12:20</string>
    <string name="SatS1">Биология</string>
    <string name="SatS2">Биология</string>
    <string name="SatS3">Информатика</string>
    <string name="SatS4">Информатика</string>
    <string name="SatS5" />
    <string name="SatS6" />
</resources>