<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".Pupil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/main_toolbar"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pfio"
            android:id="@+id/tv_fio"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/Piin"
            android:textStyle="bold"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="2"
            android:id="@+id/tv_iin"
            android:text="@string/PPiin"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>
        <ImageView
            android:id="@+id/image_id"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_launcher_background" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:padding="5dp"
                android:textSize="16sp"
                android:text="@string/Pklass" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:textStyle="bold"
                android:id="@+id/tv_class"
                android:text="@string/PPklass" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:padding="5dp"
                android:textSize="16sp"
                android:text="@string/Pgroup" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:id="@+id/tv_group"
                android:text="@string/PPgroup" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/Ppv" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/PgrK" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="#636363"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:id="@+id/tv_advanced1"
                android:text="@string/Ppv1" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:id="@+id/tv_group1"
                android:text="@string/PgrK1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:id="@+id/tv_advanced2"
                android:text="@string/Ppv2" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:id="@+id/tv_group2"
                android:text="@string/PgrK2" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="#636363"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:id="@+id/tv_standard"
                android:text="@string/Ppvs" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:id="@+id/tv_groupStandard"
                android:text="@string/PgrKs" />
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/darker_gray">
        <include layout="@layout/main_nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>